--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -217,9 +217,9 @@
                         <div *ngFor="let fuente of apo.fuentesFinanciacion;index as j">
                             <section>
                             <mat-card-title class="header-card--text sub-text textoGris" >
-                                
+
                             </mat-card-title>
-                            
+
                             <p>
                                 <strong>Fuente:</strong>
                                 {{fuente.fuente}}
@@ -242,7 +242,7 @@
                             </p>-->
                         </section>
                         </div>
-                        
+
                     </div>
 
                     </mat-card-content>
@@ -362,7 +362,7 @@
         <!-- <button mat-raised-button color="accent">Actualizar DDP</button> -->
         <button mat-raised-button color="accent" (click)="openDialogDevolver()">Devolver a <br> validación
             financiera</button>
-        <button mat-raised-button color="accent" (click)="openDialogCancelarDDP()">Cancelar DDP</button>
+        <button mat-raised-button color="accent" (click)="openDialogCancelarDDP()">Cancelar solicitud DDP</button>
     </div>
 
 </section>
