--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/cancelar-ddp/cancelar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/cancelar-ddp/cancelar-ddp.component.html
@@ -3,7 +3,7 @@
 </button>
 
 <div class="text-center">
-  <h1 class="title-menu--h1">Cancelar DDP</h1>
+  <h1 class="title-menu--h1">Cancelar solicitud DDP</h1>
 
   <p class="info-sub-title">
     <span>
@@ -52,6 +52,6 @@
 
 <div class="row justify-content-center mt-1em mb-1em">
   <button mat-raised-button color="accent" [disabled]="observaciones.invalid" (click)="devolverSolicitud()">
-    Cancelar DDP
+    Cancelar solicitud DDP
   </button>
 </div>
