--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -203,7 +203,7 @@
                             {{proyecto.municipio}}
                         </p>
                         <p>
-                            <strong>Valor total del proyecto:</strong>
+                            <strong>Valor total del proyecto para el componente:</strong>
                             {{proyecto.valorAportante| currency:'':'symbol':'3.0'}}
                         </p>
 
