Debug Solicitud de pago

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -195,7 +195,7 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-form-descripcion-factura [contrato]="contrato"></app-form-descripcion-factura>
+            <app-form-descripcion-factura [contrato]="contrato" *ngIf="registroCompletoAcordeones.registroCompletoFormaDePago === true"></app-form-descripcion-factura>
           </mat-expansion-panel>
 
           <mat-expansion-panel class="expansion-style">
