--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -76,7 +76,22 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Programación por capítulo </th>
                 <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
                   <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let programacionCapitulo of element.avancePorCapitulo">
-                    {{ programacionCapitulo.programacionCapitulo }}%
+                    <!-- {{ programacionCapitulo.programacionCapitulo }}% -->
+
+                    <mat-form-field style="width: 3em;">
+                      <input  matInput
+                              type="number"
+                              min="0"
+                              maxlength="3"
+                              onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                              max="100"
+                              [(ngModel)]="programacionCapitulo.programacionCapitulo"
+                              required
+                              style="width: 2em;"
+                              (ngModelChange)="seRealizoCambio = true">
+                  </mat-form-field>
+                  <span style="margin: .5em;">%</span>
+                  <span class="contador">{{3 - textoLimpio( programacionCapitulo.programacionCapitulo ) }}</span>
                   </div>
                 </td>
             </ng-container>
