--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/form-verificar-orden-giro/form-verificar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/form-verificar-orden-giro/form-verificar-orden-giro.component.html
@@ -94,6 +94,113 @@
         </mat-expansion-panel>
     </mat-accordion>
 
+    <div *ngIf="esVerDetalle === true">
+        <mat-card class="shipping-card border" align="left">
+            <mat-card-header class="header-card">
+                <mat-card-title class="header-card--text card-title-detalle">
+                    Verificación de la coordinación financiera
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <p style="margin-left: 2em;"><b> {{ formObservacion.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación financiera tiene observaciones a la orden de giro?</b>: Si</p>
+                <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación financiera tiene observaciones a la orden de giro?</b>: No</p>
+                <section [innerHTML]="formObservacion.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"></section>
+            </mat-card-content>
+        </mat-card>
+    </div>
+
+    <div *ngIf="esVerDetalle === false">
+        <form [formGroup]="formObservacion" novalidate (ngSubmit)="guardar()">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-12">
+                    <div class="row justify-content-center align-items-center" style="width: 100%;">
+                        <div class="pr-1">
+                            <label class="label-left" for="tieneObservaciones">¿Desde la coordinación financiera tiene observaciones a la orden de giro?</label>
+                        </div>
+                        <div>
+                            <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
+                                <mat-radio-button [value]="true" [checked]="formObservacion.get( 'tieneObservaciones' ).value === true">Sí</mat-radio-button>
+                                <mat-radio-button [value]="false" [checked]="formObservacion.get( 'tieneObservaciones' ).value === false">No</mat-radio-button>
+                            </mat-radio-group>
+                        </div>
+                        <span class="required-form-group m-0 margin-required">*</span>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="formObservacion.value.tieneObservaciones == true" align="left">
+                <div class="text-area-quill"
+                [class.color-secondaryColor]="formObservacion.get('observaciones').invalid && formObservacion.get('observaciones').touched || formObservacion.get('observaciones').invalid && esRegistroNuevo === false">
+                    <label  class="text-area-quill--label align-left-label"
+                            [class.colorMainColor]="!(formObservacion.get('observaciones').invalid && formObservacion.get('observaciones').touched || formObservacion.get('observaciones').invalid)">
+                            Observaciones a la orden de giro
+                    </label>
+                    <quill-editor   class="quill-editor-style ml-1em"
+                                    [styles]="editorStyle"
+                                    [modules]="config"
+                                    (onContentChanged)="maxLength($event, 1000)"
+                                    formControlName="observaciones"
+                                    #observacion
+                                    required>
+                    </quill-editor>
+                </div>
+                <span class="contador miles" *ngIf="formObservacion.get('observaciones').value !== null">
+                  {{1000 - textoLimpio( observacion.quillEditor, 1000 )}}
+                </span>
+                <span class="contador miles" *ngIf="formObservacion.get('observaciones').value === null">
+                  1000
+                </span>
+                <span class="icon-incompleto">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="( formObservacion.get('observaciones').invalid && formObservacion.get('observaciones').touched ) || ( formObservacion.get('observaciones').invalid && esRegistroNuevo === false )"
+                    />
+                  </span>
+            </div>
+            <div class="text-center mt-1em">
+                <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formObservacion.dirty === false">
+                    <img src="assets/img/icon/guardar.svg">
+                </button>
+            </div>
+        </form>
+    
+        <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
+            <table mat-table [dataSource]="tablaHistorial" matSort>
+          
+                <ng-container matColumnDef="fechaRevision">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                  <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                </ng-container>
+          
+                <ng-container matColumnDef="responsable">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                    <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                        <div [ngSwitch]="element.menuId">
+                            <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                            <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                            <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                        </div>
+                    </td>
+                </ng-container>
+          
+                <ng-container matColumnDef="historial">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                  <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                      <section [innerHTML]="element.observacion"></section>
+                  </td>
+                </ng-container>
+            
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+            </table>
+        </section>
+    </div>
+
     <div class="mt-3em">
         <mat-card class="shipping-card border" align="left" *ngIf="esVerDetalle === true">
             <mat-card-header class="header-card">
