--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-proyecto/form-proyecto.component.html
@@ -54,11 +54,12 @@
                                                     [contrato]="contrato"
                                                     [faseCodigo]="fase.get( 'codigo' ).value"
                                                     [criteriosPagoFacturaCodigo]="registrarSolicitudPagoObs !== undefined ? registrarSolicitudPagoObs.criteriosPagoFacturaCodigo : ''"
-                                                    [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago">
+                                                    [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                    (emitAnticipo)="fase.get( 'tieneAnticipo' ).setValue( $event )">
                             </app-obs-criterio-pagos>
                         </mat-expansion-panel>
 
-                        <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="fase.get( 'codigo' ).value === fasesContrato.construccion && manejoAnticipoRequiere === true">
+                        <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="fase.get( 'codigo' ).value === fasesContrato.construccion && manejoAnticipoRequiere === true && fase.get( 'tieneAnticipo' ).value === false">
                             <mat-expansion-panel-header class="expansion-style--header">
                                 <mat-panel-title class="expansion-style--title font-size-09em">
                                     Amortización del anticipo - {{ fase.get( 'codigo' ).value === fasesContrato.preConstruccion ? 'Fase 1' : 'Fase 2' }}
