--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descripcion-factura/form-descripcion-factura.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descripcion-factura/form-descripcion-factura.component.html
@@ -7,8 +7,8 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
-                <p style="margin-bottom: 2em;" *ngIf="addressForm.get( 'esFactura' ).value === true"><strong>Tipo de documento:</strong> Si </p>
-                <p style="margin-bottom: 2em;" *ngIf="addressForm.get( 'esFactura' ).value === false"><strong>Tipo de documento:</strong> No </p>
+                <p style="margin-bottom: 2em;" *ngIf="addressForm.get( 'esFactura' ).value === true"><strong>Tipo de documento:</strong> Factura </p>
+                <p style="margin-bottom: 2em;" *ngIf="addressForm.get( 'esFactura' ).value === false"><strong>Tipo de documento:</strong> Cuenta de cobro </p>
                 <p style="margin-top: 2em;"><strong style="font-size: 16px;">Número de documento:</strong> {{ addressForm.get( 'numeroDocumento' ).value }} </p>
                 <p style="margin-top: 2em;"><strong style="font-size: 16px;">Fecha de documento:</strong> {{ addressForm.get( 'fechaDocumento' ).value | date: 'dd/MM/yyyy' }} </p>
             </mat-card-content>
