--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
@@ -25,52 +25,51 @@
       <p><strong>Valor inicial del contrato: </strong>{{ this.valorInicialContrato  | currency: '':'symbol-narrow':'.0-0'  }}</p>
       <p><strong>Valor actual del contrato: </strong>{{ this.valorActualContrato  | currency: '':'symbol-narrow':'.0-0'  }}</p>
       <p><strong>Valor fase 1 - Preconstrucción (Estudios y diseños): </strong>{{ this.valorFase1Preconstruccion  | currency: '':'symbol-narrow':'.0-0'  }}</p>
-      <p><strong>Valor fase 2 - Construcción (Obra): </strong>{{ this.valorfase2ConstruccionObra  | currency: '':'symbol-narrow':'.0-0'  }}</p> 
+      <p><strong>Valor fase 2 - Construcción (Obra): </strong>{{ this.valorfase2ConstruccionObra  | currency: '':'symbol-narrow':'.0-0'  }}</p>
       <div *ngIf="this.valorProponente == '1'">
-        <!--
-          Se comentan estos campos ya que no esta definiendo ninguna variable a mostrar - Carlos Molero 08/07/2021
-          <p><strong>Número de identificación del representante legal del contratista de inteventoría: </strong></p>
-          <p><strong>Nombre del representante legal del contratista de interventoría: </strong></p>
-        -->
-        <p *ngIf="contrato.usuarioInterventoria !== undefined">
-          <strong>Número de identificación del contratista de interventoría: </strong>
-          {{ this.contrato.usuarioInterventoria.numeroIdentificacion }}
-        </p>
-        <p *ngIf="contrato.usuarioInterventoria !== undefined">
-          <strong>Nombre de la entidad contratista de interventoría: </strong
-          >{{ this.contrato.usuarioInterventoria.primerNombre }} {{ this.contrato.usuarioInterventoria.primerApellido }}
-        </p>
-        <p *ngIf="numeroIdentificacionRepresentanteContratistaInterventoria !== undefined">
-          <strong>Número de identificación del representante legal del contratista de obra: </strong
-          >{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}
-        </p>
-        <p *ngIf="nombreEntidadContratistaSupervisorInterventoria !== undefined">
-          <strong>Nombre del representante legal del contratista de obra: </strong
-          >{{ this.nombreEntidadContratistaSupervisorInterventoria }}
-        </p>
-        <p><strong>Número de identificación de la entidad contratista de obra: </strong>900.564.768-5</p>
-        <p><strong>Nombre entidad contratista de obra: </strong>{{ this.nombreEntidadContratistaObra }}</p>
-      </div>
-      <div *ngIf="this.valorProponente == '2'">
         <p>
-          <strong>Número de identificación del representante legal del contratista de inteventoría: </strong
-          >{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}
+          <strong>Número de identificación del representante legal del contratista de obra: </strong
+          > {{ this.numeroIdentificacionEntidadContratistaObra }}
+        </p>
+        <p>
+          <strong>Nombre del representante legal del contratista de obra: </strong
+          >{{ this.nombreRepresentanteLegalInterventoria }}
+        </p>
+        <p><strong>Número de identificación de la entidad contratista de obra: </strong>{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}</p>
+        <p><strong>Nombre entidad contratista de obra: </strong>{{ this.nombreEntidadContratistaObra }}</p>
+        <p>
+          <strong>Número de identificación del representante legal del contratista de interventoría: </strong
+          > {{ this.contrato?.interventor?.numeroIdentificacion }}
         </p>
         <p>
           <strong>Nombre del representante legal del contratista de interventoría: </strong
-          >{{ this.nombreEntidadContratistaSupervisorInterventoria }}
+          >{{ this.contrato?.interventor?.getNombreCompleto }}
         </p>
-        <p><strong>Número de identificación del contratista de interventoría: </strong>870.876.977-4</p>
+        <p><strong>Número de identificación de la entidad contratista de interventoría: </strong>
+          {{ this.contrato?.interventor?.nitOrganizacion }}</p>
+        <p><strong>Nombre entidad contratista de interventoría: </strong>
+          {{ this.contrato?.interventor?.nombreOrganizacion }}</p>
+      </div>
+      <div *ngIf="this.valorProponente == '2'">
+        <p>
+          <strong>Número de identificación del representante legal del contratista de interventoría: </strong
+          >{{ this.numeroIdentificacionEntidadContratistaObra }}
+        </p>
+        <p>
+          <strong>Nombre del representante legal del contratista de interventoría: </strong
+            >{{ this.nombreRepresentanteLegalInterventoria }}
+          </p>
+        <p><strong>Número de identificación del contratista de interventoría: </strong>{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}</p>
         <p>
           <strong>Nombre de la entidad contratista de interventoría: </strong>{{ this.nombreEntidadContratistaObra }}
         </p>
-        <p *ngIf="contrato.usuarioInterventoria !== undefined">
+        <p *ngIf="contrato.supervisor !== undefined">
           <strong>Número de identificación Supervisor: </strong>
-          {{ this.contrato.usuarioInterventoria.numeroIdentificacion }}
+          {{ this.contrato?.supervisor?.numeroIdentificacion }}
         </p>
-        <p *ngIf="contrato.usuarioInterventoria !== undefined">
-          <strong>Nombre Supervisor: </strong>{{ this.contrato.usuarioInterventoria.primerNombre }}
-          {{ this.contrato.usuarioInterventoria.primerApellido }}
+        <p *ngIf="contrato.supervisor !== undefined">
+          <strong>Nombre Supervisor: </strong>{{ this.contrato?.supervisor?.primerNombre }}
+          {{ this.contrato?.supervisor?.primerApellido }}
         </p>
       </div>
       <p>
