Revert "Merge branch 'Fase-2-completo' into ControlCambios"
This reverts commit 533de1541e66403568d0f36885d4e8c7eecbc398, reversing
changes made to 867e73ae54ea376084938d1f4e16e420aa77f437.

--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
@@ -223,7 +223,7 @@
                             {{proyecto.municipio}}
                         </p>
                         <p>
-                            <strong>Valor total del proyecto para el componente de {{ detailavailabilityBudget?.tipoSolicitudContratacion === '1' ? 'Obra' : detailavailabilityBudget?.tipoSolicitudContratacion === '2' ? 'Interventoria' : '' }}:</strong>
+                            <strong>Valor total del proyecto:</strong>
                             {{ getTotalProyecto( proyecto.aportantes ) | currency:'':'symbol':'3.0' }}
                         </p>
 
