--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-validar-acta-inicio-construccion/form-validar-acta-inicio-construccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-validar-acta-inicio-construccion/form-validar-acta-inicio-construccion.component.html
@@ -30,46 +30,35 @@
       <div *ngIf="this.valorProponente == '1'">
         <p>
           <strong>Número de identificación del representante legal del contratista de obra: </strong
-          > {{ this.numeroIdentificacionEntidadContratistaObra }}
+          >{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}
         </p>
         <p>
           <strong>Nombre del representante legal del contratista de obra: </strong
-          >{{ this.nombreRepresentanteLegalInterventoria }}
+          >{{ this.nombreEntidadContratistaSupervisorInterventoria }}
         </p>
-        <p><strong>Número de identificación de la entidad contratista de obra: </strong>{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}</p>
+        <p><strong>Número de identificación de la entidad contratista de obra: </strong>900.564.768-5</p>
         <p><strong>Nombre entidad contratista de obra: </strong>{{ this.nombreEntidadContratistaObra }}</p>
         <p>
-          <strong>Número de identificación del representante legal del contratista de interventoría: </strong
-          > {{ this.contrato?.interventor?.numeroIdentificacion }}
+          <strong>Número de identificación Supervisor: </strong>
+          {{ this.contrato.usuarioInterventoria.numeroIdentificacion }}
         </p>
         <p>
-          <strong>Nombre del representante legal del contratista de interventoría: </strong
-          >{{ this.contrato?.interventor?.getNombreCompleto }}
+          <strong>Nombre Supervisor: </strong>{{ this.contrato.usuarioInterventoria.primerNombre }}
+          {{ this.contrato.usuarioInterventoria.primerApellido }}
         </p>
-        <p><strong>Número de identificación de la entidad contratista de interventoría: </strong>
-          {{ this.contrato?.interventor?.nitOrganizacion }}</p>
-        <p><strong>Nombre entidad contratista de interventoría: </strong>
-          {{ this.contrato?.interventor?.nombreOrganizacion }}</p>
       </div>
       <div *ngIf="this.valorProponente == '2'">
         <p>
-          <strong>Número de identificación del representante legal del contratista de interventoría: </strong
-          >{{ this.numeroIdentificacionEntidadContratistaObra }}
+          <strong>Número de identificación del representante legal del contratista de inteventoría: </strong
+          >{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}
         </p>
         <p>
           <strong>Nombre del representante legal del contratista de interventoría: </strong
-          >{{ this.nombreRepresentanteLegalInterventoria }}
+          >{{ this.nombreEntidadContratistaSupervisorInterventoria }}
         </p>
-        <p><strong>Número de identificación del contratista de interventoría: </strong>{{ this.numeroIdentificacionRepresentanteContratistaInterventoria }}</p>
+        <p><strong>Número de identificación del contratista de interventoría: </strong>870.876.977-4</p>
         <p>
           <strong>Nombre de la entidad contratista de interventoría: </strong>{{ this.nombreEntidadContratistaObra }}
-        </p>
-        <p>
-          <strong>Número de identificación Supervisor: </strong>
-          {{ this.contrato?.supervisor?.numeroIdentificacion }}
-        </p>
-        <p>
-          <strong>Nombre Supervisor: </strong>{{ this.contrato?.supervisor?.getNombreCompleto }}
         </p>
       </div>
       <p>
