--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/planes-programas-verificar-requisitos/planes-programas-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/planes-programas-verificar-requisitos/planes-programas-verificar-requisitos.component.html
@@ -8,7 +8,7 @@
     <ng-container matColumnDef="recibioRequisito">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>¿Se recibio el requisito?</th>
       <td mat-cell *matCellDef="let element" align="center">
-        {{ element.nameRequisito }}
+        {{ element.recibioRequisito === true ? 'Si' : 'No' }}
       </td>
     </ng-container>
 
