--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -237,6 +237,7 @@
     [fechaSolicitudNovedad]="addressForm.get('fechaSolicitudNovedad').value"
     [estaEditando]="estaEditando"
     [fechaSolicitudNovedad]="addressForm.get('fechaSolicitudNovedad').value"
+    [contrato]="contrato"
     (guardar)="onSubmit()"
   >
   </app-accordion-novedades>
