--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -106,7 +106,7 @@
                  element.vaComite === false) || (element.estadoCodigo === '27'  &&
                  element.registroCompletoTramiteNovedades === true &&
                  element.vaComite === false)" >
-          Enviar trámite
+          Aprobar trámite
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         [routerLink]="[ 'verDetalle', element.novedadContractualId ]"
