--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-intervn/ver-detalle-solic-nov-intervn.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-intervn/ver-detalle-solic-nov-intervn.component.html
@@ -188,6 +188,12 @@
                 </strong>
                 {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
               </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+                <strong>
+                  Fecha estimada de terminación del contrato:
+                </strong>
+                {{ descripcion?.fechaEstimadaFinalizacion | date: 'dd/MM/yyyy' }}
+              </p>
 
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'">
                 <strong>Presupuesto adicional solicitado: </strong>
