--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/accordion-novedades/accordion-novedades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/accordion-novedades/accordion-novedades.component.html
@@ -2,18 +2,19 @@
 <mat-accordion>
     <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let novedad of novedadeContractual.novedadContractualDescripcion; let i = index" >
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title 
+            <mat-panel-title class="expansion-style--title
             {{ novedad.registroCompleto === undefined ? 'sin-diligenciar' : (novedad.registroCompleto === false ? 'en-proceso' : 'completo' ) }}">
                 Novedad {{ i + 1 }}
             </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <app-form-registrar-novedad-accord 
+        <app-form-registrar-novedad-accord
                                             [tiposNovedadModificacionContractual]="this.tiposNovedadModificacionContractual"
                                             [novedadDescripcion]="novedad"
+                                            [contrato]="contrato"
                                             (guardar)="guardarRegistro()"
             >
         </app-form-registrar-novedad-accord>
     </mat-expansion-panel>
-    
+
 </mat-accordion>
