--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -76,7 +76,7 @@
           </div>
         </div>
       </div>
-      <div class="row" *ngIf="addressForm.get('instanciaPresentoSolicitud').value !== '3'"> 
+      <div class="row" *ngIf="addressForm.get('instanciaPresentoSolicitud').value !== '3'">
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
@@ -178,9 +178,10 @@
   </div>
 </form>
 <div class="animatedDown" *ngIf="addressForm.controls.tipoNovedad.value">
-  <app-accordion-novedades 
+  <app-accordion-novedades
                           [tiposNovedadModificacionContractual]="tiposNovedadModificacionContractual"
                           [novedadeContractual]="novedadContractual"
+                          [contrato]="contrato"
                           (guardar)="onSubmit()"
   >
   </app-accordion-novedades>
