--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
@@ -61,7 +61,7 @@
                             </app-form-criterios-pago>
                         </mat-expansion-panel>
 
-                        <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="fase.get( 'codigo' ).value === fasesContrato.construccion && manejoAnticipoRequiere === true && fase.get( 'tieneAnticipo' ).value === false">
+                        <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="fase.get( 'codigo' ).value === fasesContrato.construccion && manejoAnticipoRequiere === true && fase.get( 'tieneAnticipo' ).value === false && contrato.solicitudPago.length > 1">
                             <mat-expansion-panel-header class="expansion-style--header">
                                 <mat-panel-title class="expansion-style--title font-size-09em">
                                     Amortización del anticipo - {{ fase.get( 'codigo' ).value === fasesContrato.preConstruccion ? 'Fase 1' : 'Fase 2' }}
@@ -72,6 +72,8 @@
                                                             [contrato]="contrato"
                                                             [listaMenusId]="listaMenusId"
                                                             [esVerDetalle]="esVerDetalle"
+                                                            [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
+                                                            [faseCodigo]="fase.get( 'codigo' ).value"
                                                             [amortizacionAnticipoCodigo]="registrarSolicitudPagoObs !== undefined ? registrarSolicitudPagoObs.amortizacionAnticipoCodigo : ''"
                                                             [contratacionProyectoId]="proyecto.get( 'contratacionProyectoId' ).value">
                             </app-form-amortizacion-anticipo>
