--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
@@ -136,7 +136,7 @@
         </div>
       </div>
 
-      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2' || novedadDescripcion.tipoNovedadCodigo === '6'">
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
@@ -174,7 +174,7 @@
           </div>
         </div>
       </div>
-      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2' || novedadDescripcion.tipoNovedadCodigo === '6'">
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
@@ -229,7 +229,44 @@
         </div>
       </div>
     </div>
-
+    <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '6'">
+      <div class="col-md-8">
+        <div class="row">
+          <div class="pr-1">
+            <label class="label-left" for="fechaInicio" [class.color-secondaryColor]="
+                addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched ||
+                addressForm.get('fechaInicio').invalid && estaEditando">
+              Fecha de reinicio
+            </label>
+          </div>
+          <div class="col d-flex">
+            <mat-form-field class="example-full-width">
+              <input matInput [matDatepicker]="pickerPlazoInicio" formControlName="fechaInicio" readonly
+                (click)="pickerPlazoInicio.open()" placeholder="DD/MM/AAAA" required>
+              <mat-datepicker #pickerPlazoInicio></mat-datepicker>
+            </mat-form-field>
+            <button mat-button color="primary" type="button" (click)="pickerPlazoInicio.open()"
+              class="btn-calendario">
+              <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
+            </button>
+            <span class="icon-incompleto">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="
+                  (addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched) ||
+                  (addressForm.get('fechaInicio').invalid && estaEditando)
+                "
+              />
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
       <mat-card-title class="header-card--text sub-text" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
         Plazo solicitado
       </mat-card-title>
