--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-firmas/registrar-firmas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-firmas/registrar-firmas.component.html
@@ -580,8 +580,15 @@
     </span>
   </div>
   <div class="text-center">
-    <button mat-button color="warn" class="btn-guardar" type="submit"
-    [disabled]="addressForm.dirty === false">
+    <button mat-button color="warn" class="btn-guardar" type="submit" 
+      [disabled]="
+        addressForm.get('continuarProceso').invalid ||
+        addressForm.get('continuarProceso').value === true &&
+        addressForm.get('urlFirmas').invalid ||
+        addressForm.get('continuarProceso').value === false &&
+        addressForm.get('razones').invalid
+      "
+    >
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
