--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -174,14 +174,16 @@
         <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo adicional meses: </strong> {{ descripcion.plazoAdicionalMeses }}</p>
         <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo adicional días: </strong> {{ descripcion.plazoAdicionalDias }}</p>
 
-        <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+        <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2' || descripcion.tipoNovedadCodigo == '6'">
           <strong *ngIf="descripcion.tipoNovedadCodigo == '1'">Fecha de inicio de la suspensión: </strong>
           <strong *ngIf="descripcion.tipoNovedadCodigo == '2'">Fecha de inicio de la prórroga a las suspensión: </strong>
+          <strong *ngIf="descripcion.tipoNovedadCodigo == '6'">Fecha de inicio del reinicio: </strong>
           {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}
         </p>
-        <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+        <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2' || descripcion.tipoNovedadCodigo == '6'">
           <strong *ngIf="descripcion.tipoNovedadCodigo == '1'">Fecha final de la suspensión: </strong>
           <strong *ngIf="descripcion.tipoNovedadCodigo == '2'">Fecha final de la prórroga a las suspensión: </strong>
+          <strong *ngIf="descripcion.tipoNovedadCodigo == '6'">Fecha final del reinicio: </strong>
           {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
         </p>
 
@@ -191,12 +193,7 @@
           </strong>
           {{ descripcion?.fechaEstimadaFinalizacion | date: 'dd/MM/yyyy' }}
         </p>
-        <p *ngIf="descripcion.tipoNovedadCodigo == '6'">
-          <strong>
-            Fecha de reinicio
-          </strong>
-          {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}
-        </p>
+
         <p *ngIf="descripcion.tipoNovedadCodigo == '3'" ><strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado | currency: '':'symbol':'3.0' }} </p>
 
         <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
