--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -182,7 +182,8 @@
       <div
         *ngIf="
           novedadDescripcion.tipoNovedadCodigo == '1' ||
-          novedadDescripcion.tipoNovedadCodigo == '2'
+          novedadDescripcion.tipoNovedadCodigo == '2' ||
+          novedadDescripcion.tipoNovedadCodigo === '6'
         "
       >
         <mat-card-title class="header-card--text sub-text"> Plazo solicitado </mat-card-title>
@@ -201,6 +202,7 @@
                   Fecha de inicio
                   <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '1'">de la suspensión</span>
                   <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '2'">de la prórroga a la suspensión</span>
+                  <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '6'">de reinicio</span>
                 </label>
               </div>
               <div class="col d-flex">
@@ -249,7 +251,8 @@
         class="row"
         *ngIf="
           novedadDescripcion.tipoNovedadCodigo == '1' ||
-          novedadDescripcion.tipoNovedadCodigo == '2'
+          novedadDescripcion.tipoNovedadCodigo == '2' ||
+          novedadDescripcion.tipoNovedadCodigo === '6'
         "
       >
         <div class="col-md-8">
@@ -266,6 +269,7 @@
                 Fecha final
                 <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '1'">de la suspensión</span>
                 <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '2'">de la prórroga a la suspensión</span>
+                <span *ngIf="novedadDescripcion.tipoNovedadCodigo === '6'">de reinicio</span>
               </label>
             </div>
             <div class="col d-flex">
@@ -320,65 +324,6 @@
               Fecha estimada de terminación del contrato:
             </label>
             <span> {{ fechaEstimadaFinalizacion  | date: 'dd/MM/yyyy' }}</span>
-          </div>
-        </div>
-      </div>
-      </div>
-    <!--cambio reinicio-->
-    <div *ngIf="novedadDescripcion.tipoNovedadCodigo === '6'">
-      <mat-card-title class="header-card--text sub-text"> Plazo solicitado </mat-card-title>
-      <div class="row">
-        <div class="col-md-8">
-          <div class="row">
-            <div class="pr-1">
-              <label
-                class="label-left"
-                for="fechaInicio"
-                [class.color-secondaryColor]="
-                  (addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched) ||
-                  (addressForm.get('fechaInicio').invalid && estaEditando)
-                "
-              >
-                Fecha de reinicio
-              </label>
-            </div>
-            <div class="col d-flex">
-              <mat-form-field class="example-full-width">
-                <input
-                  matInput
-                  [matDatepicker]="pickerPlazoInicio"
-                  formControlName="fechaInicio"
-                  readonly
-                  (click)="pickerPlazoInicio.open()"
-                  placeholder="DD/MM/AAAA"
-                  required
-                />
-                <mat-datepicker #pickerPlazoInicio></mat-datepicker>
-              </mat-form-field>
-              <button
-                mat-button
-                color="primary"
-                type="button"
-                (click)="pickerPlazoInicio.open()"
-                class="btn-calendario"
-              >
-                <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
-              </button>
-              <span class="icon-incompleto">
-                <img
-                  class="icon-incompleto--img"
-                  src="assets/img/icon/incompleto.svg"
-                  alt="este campo es requerido"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Debe ingresar la información en el campo para continuar"
-                  matTooltipClass="info-tooltip"
-                  *ngIf="
-                    (addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched) ||
-                    (addressForm.get('fechaInicio').invalid && estaEditando)
-                  "
-                />
-              </span>
-            </div>
           </div>
         </div>
       </div>
